language/src/test/programs/error/runtime/no_main_method.rngl
fn main_alt():
    ret 1